Remove SBT plugin, see #597. (#598)