@@ -108,8 +108,7 @@ lazy val root = project
     utils,
     core,
     metaconfig,
-    readme,
-    scalafmtSbt
+    readme
   )
   .dependsOn(core)
 
@@ -174,27 +173,6 @@ lazy val bootstrap = project
     )
   )
   .dependsOn(utils)
-
-lazy val scalafmtSbt = project
-  .settings(allSettings)
-  .settings(ScriptedPlugin.scriptedSettings)
-  .settings(
-    coverageHighlighting := false,
-    sbtPlugin := true,
-    scalaVersion := "2.10.5",
-    // In convention of sbt plugins, the module is sbt-scalafmt instead of scalafmt-sbt.
-    moduleName := "sbt-scalafmt",
-    sources in Compile +=
-      baseDirectory.value / "../core/src/main/scala/org/scalafmt/Versions.scala",
-    scriptedLaunchOpts := Seq(
-      "-Dplugin.version=" + version.value,
-      // .jvmopts is ignored, simulate here
-      "-XX:MaxPermSize=256m",
-      "-Xmx2g",
-      "-Xss2m"
-    ),
-    scriptedBufferLog := false
-  )
 
 lazy val benchmarks = project
   .settings(moduleName := "scalafmt-benchmarks")
